--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portfólio | Iven Rodrigues">
+    <meta property="og:description" content="SysAdmin, Infraestrutura Linux e Automação com Docker. Confira meus projetos!">
+    <meta property="og:image" content="https://ivenrodrigues.github.io/portifolio/assets/capa.png">
+    <meta property="og:url" content="https://ivenrodrigues.github.io/portifolio/">
+    <meta property="og:type" content="website">
     <title>Portfólio | Iven Rodrigues</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
